# SAAFEC-SEQ

./: .gitignore  README.md  fastaA  mutation_list.txt  pyproject.toml  saafec-seq.py
saafec-seq/: saafec-seq.py
saafec_seq/: __main__.py  saafec_seq.py
saafec_seq/utils/: protseqfeature.py
utils/: protseqfeature.py
