[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saafec-seq"
version = "1.0.0"
description = "SAAFEC-SEQ: sequence-based prediction of protein stability changes caused by missense mutations"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Li, Gen" },
  { name = "Panday, Shailesh Kumar" }
]
dependencies = [
  "numpy==1.26.4",
  "scipy==1.14.1",
  "pandas==2.2.3",
  "scikit-learn==1.6.0",
  "xgboost==0.82",
  "requests==2.32.3",
]

[project.urls]
Homepage = "https://compbio.clemson.edu/saafec-seq/"
Repository = "https://github.com/shaileshp51/SAAFEC-SEQ"

[project.scripts]
saafec-seq = "saafec_seq.saafec_seq:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["saafec_seq", "saafec_seq.*"]

[tool.setuptools.package-data]
"saafec_seq" = ["data/regression.model"]